--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1603,6 +1603,217 @@ pre,.MsoNormal{
     white-space: pre-line;
     font-size:13px;
 }
+.blogger-post-footer{display:none;}
+
+.highlight {
+    background: none repeat scroll 0 0 #000000;
+    color: #FFFFFF;
+}
+.highlight code {
+    background: none repeat scroll 0 0 #000000;
+    color: #FFFFFF;
+}
+.highlight .c {
+    color: #9933CC;
+    font-style: italic;
+}
+.highlight .err {
+    background-color: #E3D2D2;
+    color: #A61717;
+}
+.highlight .k {
+    color: #FF6600;
+    font-weight: bold;
+}
+.highlight .javascript .k {
+    color: #CCCC66;
+    font-weight: bold;
+}
+.highlight .o {
+    color: #FFFFFF;
+    font-weight: bold;
+}
+.highlight .cm {
+    background: none repeat scroll 0 0 #070707;
+    color: #772CB7;
+    font-style: italic;
+}
+.highlight .cp {
+    color: #9933CC;
+    font-weight: bold;
+}
+.highlight .c1 {
+    color: #9933CC;
+    font-style: italic;
+}
+.highlight .cs {
+    color: #9933CC;
+    font-style: italic;
+    font-weight: bold;
+}
+.highlight .gd {
+    background-color: #FFDDDD;
+    color: #000000;
+}
+.highlight .gd .x {
+    background-color: #FFAAAA;
+    color: #000000;
+}
+.highlight .ge {
+    font-style: italic;
+}
+.highlight .gr {
+    color: #AA0000;
+}
+.highlight .gh {
+    color: #999999;
+}
+.highlight .gi {
+    background-color: #DDFFDD;
+    color: #000000;
+}
+.highlight .gi .x {
+    background-color: #AAFFAA;
+    color: #000000;
+}
+.highlight .go {
+    color: #888888;
+}
+.highlight .gp {
+    color: #555555;
+}
+.highlight .gs {
+    font-weight: bold;
+}
+.highlight .gu {
+    color: #AAAAAA;
+}
+.highlight .gt {
+    color: #AA0000;
+}
+.highlight .kc {
+    font-weight: bold;
+}
+.highlight .kd {
+    font-weight: bold;
+}
+.highlight .kp {
+    font-weight: bold;
+}
+.highlight .kr {
+    font-weight: bold;
+}
+.highlight .kt {
+    color: #445588;
+    font-weight: bold;
+}
+.highlight .m {
+    color: #009999;
+}
+.highlight .s {
+    color: #66FF00;
+}
+.highlight .na {
+    color: #99CC99;
+}
+.highlight .nb {
+}
+.highlight .nc {
+    color: #FFFFFF;
+    font-weight: bold;
+}
+.highlight .no {
+    color: #FFFFFF;
+}
+.highlight .ni {
+    color: #339999;
+}
+.highlight .ne {
+    color: #990000;
+    font-weight: bold;
+}
+.highlight .nf {
+    color: #FFCC00;
+    font-weight: bold;
+}
+.highlight .nn {
+    color: #555555;
+}
+.highlight .nt {
+    color: #FF6600;
+}
+.highlight .nv {
+    color: #008080;
+}
+.highlight .ow {
+    font-weight: bold;
+}
+.highlight .w {
+    color: #BBBBBB;
+}
+.highlight .mf {
+    color: #CCFF33;
+}
+.highlight .mh {
+    color: #CCFF33;
+}
+.highlight .mi {
+    color: #CCFF33;
+}
+.highlight .mo {
+    color: #CCFF33;
+}
+.highlight .sb {
+    background: none repeat scroll 0 0 #CCCC33;
+    color: #000000;
+}
+.highlight .sc {
+    color: #66FF00;
+}
+.highlight .sd {
+    color: #66FF00;
+}
+.highlight .s2 {
+    color: #66FF00;
+}
+.highlight .se {
+    color: #66FF00;
+}
+.highlight .sh {
+    color: #66FF00;
+}
+.highlight .si {
+}
+.highlight .sx {
+    color: #66FF00;
+}
+.highlight .sr {
+    color: #009926;
+}
+.highlight .s1 {
+    color: #66FF00;
+}
+.highlight .ss {
+    color: #339999;
+}
+.highlight .bp {
+    color: #999999;
+}
+.highlight .vc {
+    color: #008080;
+}
+.highlight .vg {
+    color: #008080;
+}
+.highlight .vi {
+    color: #008080;
+}
+.highlight .il {
+    color: #009999;
+}
+.old_code {
+    background-color: #F5F6E7;
+}
 /* end PageFooter */
 
 /* begin LayoutCell, content */
