--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,12 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Blogger name:</b>
-  <%= @blog.blogger_name %>
-</p>
+<!-- <p>
+  <b>Blog Author :</b>
+  <%#= @blog.blog_author %>
+</p> -->
 
 <p>
-  <b>Blog url:</b>
+  <b>Blog url :</b>
   <%= @blog.blog_url %>
 </p>
 
