--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -31,7 +31,8 @@ h1, h2, h3, h4, h5, h6, p, a, ul, ol, li
 
 .art-postcontent p
 {
-    margin: 12px 0;
+    margin: 0px 0;
+    overflow: auto;
 }
 
 h1, h2, h3, h4, h5, h6,
@@ -189,6 +190,7 @@ html
 
 #art-main
 {
+  background-color: #EEEEEE;
   display: inline-block;
   position: relative;
   z-index: 0;
@@ -208,7 +210,7 @@ body
   color: #292929;
   height:100%;
   min-height:100%;
-  background-color: #ABABAB;
+  background-color: #EEEEEE;
   min-width: 900px;
 }
 
@@ -698,7 +700,7 @@ h2.art-logo-text a:hover
 {
   position: relative;
   padding: 5px;
-    padding-top:20px;
+    padding-top:0px;
     padding-bottom:5px;
 }
 
