--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,36 +22,67 @@
 				<div class="art-header-wrapper">
 					<div class="art-header-inner">
 						<div class="art-logo">
-							<h1 class="art-logo-name"> <%= link_to 'Blog Aggregator',read_blogs_path%> </h1>
+							<h1 class="art-logo-name"> <%= link_to 'AppDev Rubyists Blogs',read_blogs_path%> </h1>
 							<h2 class="art-logo-text"></h2>
 						</div>
 					</div>
 				</div>
 			</div>
 			<div class="cleared reset-box"></div>
-			<div class="art-nav">
+	<!--		<div style="float: left; width: 1000px;padding-top:15px;margin-left:50px;height: 55px" class="art-sheet">
+				<div class="art-sheet-tl"></div>
+				<div class="art-sheet-tr"></div>
+				<div class="art-sheet-bl"></div>
+				<div class="art-sheet-br"></div>
+				<div class="art-sheet-tc"></div>
+				<div class="art-sheet-bc"></div>
+				<div class="art-sheet-cl"></div>
+				<div class="art-sheet-cr"></div>
+				<div class="art-sheet-cc" style="top:5px"></div>
+				<div class="art-sheet-body" style="padding-top: 3px;">
+				    <div class="art-post-inner art-article">
+<%#= render :partial=>"/layouts/navigation_links" %>
+					</div>
+					<div class="cleared"></div>
+				</div>
+			</div> -->
+	<!--		<div class="art-nav" style="margin:20px 0px 0px 40px">
 				<div class="art-nav-outer">
 					<div class="art-nav-wrapper">
 						<div class="art-nav-inner">
-							<%= render :partial=>"/layouts/navigation_links" %>
+							<%#= render :partial=>"/layouts/navigation_links" %>
 						</div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 			<div class="cleared reset-box"></div>
-			<div style="float: right; height: 100%; width: 20%;" class="art-sheet">
-				<h2>Authors</h2>
-				<ul>
-				      <% if @blogs && !@blogs.nil? %>
-					<% @blogs.each do |blog|%>
-					<li>
-						<a href="<%= blog.blog_url%>" target="_blank"><%= blog.blog_author%></a>
-					</li>
-				        <%end%>
-                                      <% end %>
-				</ul>
+			<div style="float: right; width: 16%;" class="art-sheet">
+				<div class="art-sheet-tl"></div>
+				<div class="art-sheet-tr"></div>
+				<div class="art-sheet-bl"></div>
+				<div class="art-sheet-br"></div>
+				<div class="art-sheet-tc"></div>
+				<div class="art-sheet-bc"></div>
+				<div class="art-sheet-cl"></div>
+				<div class="art-sheet-cr"></div>
+				<div class="art-sheet-cc" style="top:5px"></div>
+				<div class="art-post-body">
+				    <div class="art-post-inner art-article">
+				    	<h2>Authors</h2>
+						<ul>
+						    <% if @blogs && !@blogs.nil? %>
+							<% @blogs.each do |blog|%>
+							<li>
+								<a style="text-decoration: none" href="<%= blog.blog_url%>" target="_blank"><%= blog.blog_author%></a>
+							</li>
+						        <%end%>
+		                    <% end %>
+						</ul>	
+					</div>
+					<div class="cleared"></div>
+				</div>
 			</div>
-			<div class="art-sheet" style="margin:25px 180px -5px;width:820px">
+			<div class="art-sheet" style="margin:25px 50px -5px;width:1000px">
 				<div class="art-sheet-tl"></div>
 				<div class="art-sheet-tr"></div>
 				<div class="art-sheet-bl"></div>
@@ -104,7 +135,7 @@
 							<div class="art-footer-text">
 								<!--     <p><a href="#">Link1</a> | <a href="#">Link2</a> | <a href="#">Link3</a></p> -->
 								<p>
-									Copyright © 2011 Blog aggregator 2.0 . All Rights Reserved.
+									Copyright © 2011 Blog aggregator 1.0 . All Rights Reserved.
 								</p>
 							</div>
 							<div class="cleared"></div>
