Request to add a new blog feature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -80,8 +80,19 @@
 						</ul>	
 					</div>
 					<div class="cleared"></div>
+                                        <br/>
+                                        <div class="art-post-inner art-article">
+				    	<h2>Add My Blog</h2>
+						<ul>
+							<li>
+								<%= link_to 'Add Blog URL', new_request_path %>
+							</li>
+						</ul>
+					</div>
 				</div>
 			</div>
+
+
 			<div class="art-sheet" style="margin:25px 50px -5px;width:1000px">
 				<div class="art-sheet-tl"></div>
 				<div class="art-sheet-tr"></div>
