--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,25 +1,35 @@
 <ul class="art-hmenu">
-	<% if admin_signed_in? %>
-	<li>
+                <li>
 			<%= link_to '<span class="l"></span><span class="r"></span><span class="t">Home</span>'.html_safe, read_blogs_path,:id=>"home",:class=>"active" %> 
 			<!-- <a href="#" class="active"><span class="l"></span><span class="r"></span><span class="t">Home</span></a> -->
-		</li>	
+		</li>
+                <% if admin_signed_in? %>
 		<li>
 			<%= link_to '<span class="l"></span><span class="r"></span><span class="t">New Blog Url</span>'.html_safe, new_blog_path,:id=>"new_blog"%> 
 	        </li>
-		<li>    <%= link_to '<span class="r"></span><span class="t">Log Out</span>'.html_safe, logout_path %>
-		</li>	
-	</ul>
-       <% end %>
+                <li>
+			<%= link_to "<span class='l'></span><span class='r'></span><span class='t'>Blog Requests (#{request_count})</span>".html_safe, requests_path,:id=>"new_request"%>
+	        </li>
+		<li>
+                        <%= link_to '<span class="r"></span><span class="t">Log Out</span>'.html_safe, logout_path %>
+		</li>
+                <%  else %>
+                <li>
+			<%= link_to "<span class='l'></span><span class='r'></span><span class='t'>Blog Requests</span>".html_safe, requests_path,:id=>"new_request"%>
+	        </li>
+                <% end %>
+</ul>
 	
 <script>
 $(document).ready(function(){
-	<% if params[:controller] == "read_blogs" %>
-	 $('#home').addClass('active');
-	 $('#new_blog').removeClass('active');
-	 <% else %>
+	<% if params[:controller] == "requests" %>
+	  $('#new_request').addClass('active');
+	  $('#new_blog').removeClass('active');
+          $('#home').removeClass('active');
+	<% else %>
 	  $('#new_blog').addClass('active');
-	  $('#home').removeClass('active');
-	 <% end %>
+	  $('#new_request').removeClass('active');
+          $('#home').removeClass('active');
+	<% end %>
 });
 </script>
