Handling normal user case in request functionality

--- a/app/views/requests/edit.html.erb
+++ b/app/views/requests/edit.html.erb
@@ -2,5 +2,8 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @request %> |
+<%= link_to 'Show', @request %>
+<% if admin_signed_in? %>
+|
 <%= link_to 'Back', requests_path %>
+<% end %>
