--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -14,10 +14,10 @@
   <tr>
     <td><%= request.requestor_name %></td>
     <td><a style="text-decoration: none" href="<%= request.blog_url%>" target="_blank"><%= request.blog_url%></a></td>
-    <td><%= link_to 'Add this blog', blogs_path({:blog => {:blog_url => request.blog_url}}),method: :post %></td>
+    <td><%= link_to 'Add this blog', blogs_path({:blog => {:blog_url => request.blog_url}}),:method => :post %></td>
     <td><%= link_to 'Show', request %></td>
     <td><%= link_to 'Edit', edit_request_path(request) %></td>
-    <td><%= link_to 'Destroy', request, confirm: 'Are you sure?', method: :delete %></td>
+    <td><%= link_to 'Destroy', request, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
 <% end %>
 </table>
