--- a/app/views/requests/new.html.erb
+++ b/app/views/requests/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Back', requests_path %>
+<% if admin_signed_in? %>
+  <%= link_to 'Back', requests_path %>
+<% end %>
