Formatting changes for request functionality

--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -15,7 +15,7 @@
 		</li>
                 <%  else %>
                 <li>
-			<%= link_to "<span class='l'></span><span class='r'></span><span class='t'>Blog Requests</span>".html_safe, requests_path,:id=>"new_request"%>
+			<%= link_to "<span class='l'></span><span class='r'></span><span class='t'>Blog Requests</span>".html_safe,'#' ,:id=>"new_request"%>
 	        </li>
                 <% end %>
 </ul>
